Folder names do not match names on server and personally created folders renamed by Thunderbird.
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(Not tracked)
People
(Reporter: anjeyelf, Assigned: darktrojan)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
All Imap accounts should use whatever is used on each respective server.
I do not see the imap accounts using the correct names for folders in Folder Pane as named on server and as named in profile imap account folders.
Problem -
All my Imap accounts have incorrect names for many folders.
example in gmail imap account:
Actual REsults:
My gmail webmail account uses 'Bin' (not 'Trash' and not 'Deleted')
In Folder Pane I see a 'Deleted' folder which does not exist on server.
Right click on 'Deleted' and select 'Properties' and it tells me this - imap://name%40gmail.com@imap.gmail.com/Bin with Name: Deleted.
There is no option to 'Rename' and you cannot edit the name in Properties.
In profile account folder - I see 'Bin' mbox file and 'Bin.msf'
My gmail 'Sent Mail' folder now says 'Sent'
In profile account folder - I see 'Sent Mail' mbox file and 'Sent Mail.msf'
In gmail, I manually created a folder called 'OldStore' and set it up to be used when I click on 'Archive'
This was done because otherwise gmail disappears the email/removes all labels so the only place it now resides is in 'All Mail'.
The only way to know what is 'Archived' in an 'All Mail' folder is to logon to webmail, access 'All Mail' and locate any email that does not have a label applied.
My personally created folder has been renamed as 'Archives'.
Expected REsults:
All imap folders to use the same name as used on server.
Folders I create to retain the name I set.
I do not subscribe to see 'All Mail' as it is a complete duplication of everything. But many people do subscribe to see it.
I have recently been informed the 'All Mail' is now renamed as 'Archives'
This is incorrect as 'All Mail' is not only email that has been archived. If people start to delete what is named as 'Archives' they could end up discovering data loss as emails in other imap folders then get deleted. There is no means of knowing what is archived in an 'All Mail' folder in Thunderbird.
Test:
I subscribed to see 'All Mail'
Actual Result
I now have two identical folders called 'Archives' in my gmail imap account.
Both of those folders have the 'Archives' icon applied.
The 'All Mail' Archives folder displays everything - new, read, all received no matter what folder email is sorted into, sent, spam, bin, etc and those I put into 'OldStore' now sharing the same name 'Archives.
There is no means of knowing what in that folder is 'Archived' and what is not.
Expected REsult:
All imap folders to display the same name convention as used on server in the Folder Pane.
This helps to differentiate folders in various accounts.
eg: Message List Header says eg: Sent Mail - I know automatically this is gmail without checking - but now !
All personally created folders to retain the name the user applied regardless.
The 'All Mail' folder to be called 'All Mail' as 'Archives' is incorrect and misleading.
I will now unsubscribe from see it -
The 'Subscribe' list does not have an 'Unsubscribe' option - that is another bug.
It's very important to use server names for folders in IMAP accounts.
re : 'All Mail' - This is a potentially dangerous situation. If people believe it is ONLY archived mail as per folder title and they choose to delete them, they may discover good emails disappearing forever from eg: Inbox.
Whilst it might be argued that anything not in Thunderbird - eg: server names for folders is not something you can control, that is true.
But there is no reason to try and manipulate those folder names when people subscribe to see them.
If I subscribe to see 'Sent Mail' then I expect to see 'Sent Mail'.
There is an attempt to manipulate the server names of folders that may be deemed as special default folders.
As a Thunderbird user, having the same folder type called with multiple names depending on the server is actually helpful, it is not confusing.
It helps to differentiate between the various accounts. My BT account normally would not use same folder names as my Gmail account. At a glance it's easier to see the difference when you know
There is nothing more confusing than having personally created folders renamed or trying to work out which is the correct server folder for a particular purpose when you have several with identical names and none match what you see on the server.
This will not help anyone who actually helps out in the Thunderbird Support Forum as those people are well aware of all the issues when it comes to knowing which folder is used by server. It's much easier when they are not identical both in Thunderbird and on server.
Updated•2 months ago
|
The new behavior is apparently desired. I raised my concerns here:
https://phabricator.services.mozilla.com/D268972#9305635
https://phabricator.services.mozilla.com/D268972#9309059
Quote: ... it will lead to the folder having different names in TB and in the providers web UI. And that was exactly the complaint of bug 1979511. Now you will show some "Bulk" folders as "Spam" and some MS "Deleted" folders as "Trash".
Is this behavior desired? The only correct name for these folders is the name that's used on the server.
I really don't think we need an overlay which translates everything to some arbitrary Thunderbird standard.
This will only lead to a whole plethora of confusing half-hidden names that users will be trying to correct.
There is nothing more confusing than different names for the same thing on your client and the server.
Thunderbird should autodetect the special folders on the server and use the names that are used there.
When necessary the user should be able to change these names to something more appropriate.
It seems to be desired by the TB team, please refer to comments
https://phabricator.services.mozilla.com/D268972#9308791
https://phabricator.services.mozilla.com/D268972#9310771
by TB's Director of Desktop & Mobile Apps.
Similar statements were made earlier, for example in bug 1979511 comment 9.
Comment 5•2 months ago
|
||
TB 145.0b3 on Linux, en-US version.
As of TB 145.0b3, for all IMAP accounts 'Spam' is now shown in the folder pane. That's fine for e.g. Gmail IMAP, which uses 'Spam' on the server as well. However, for Yahoo and AOL IMAP accounts, Thunderbird shows 'Spam' instead of 'Bulk'. Similar for Office365 IMAP accounts, TB shows 'Spam' instead of 'Junk'.
This problem didn't exist in TB 145.0b2.
This won't work, millions of users will be affected by this.
First they will be surprised by the unwanted renaming of their folders.
Next they may try to restore the original names.
This will result in bogus duplicated names and folders.
When trying to fix those duplicates removing them may result in loss of emails.
I appreciate the attempt to bring some consistency into Thunderbirds folder naming but this is not the way.
I don't think Thunderbird 145 is ready for release.
Comment 7•2 months ago
|
||
I know too many options can also be troublesome for users, but could we add an option to prefer using localized names for these folders vs using the names directly from the server? It seems that both options will leave some unhappy.
An option to use only names found on server would fix it for me, but I still don't see why anyone would want to rename them.
After all, this is the age of IMAP and Webmail, isn't it?
Users expect the folder names they see in Thunderbird to be same as the names they see on their webmail and mobile apps.
Comment 9•2 months ago
|
||
It might be the age of IMAP and Webmail but service providers have to control the amount of space customers are using on their servers. Therefore there will always be the need for some people to keep stuff on their own system under Local Folders in order to keep the size of their online presence within the set limit. I can see the merit of consistency when forcing the use of the same folder names locally and on the server using IMAP but that does not give any validity to forcing the use of folder names under Local Folders.
For example I have nearly 30 years of e-mails archived in my Local Folders. This was previously of the structure Local Folders > Archives > 2021 - 2030 > 2025 > 10-2025. It is not Local Folders > Archives > Archives > Archives so I have no way of differentiating between 2021 - 2030 and 2011 - 2020. The folder names (e.g. 2021 - 2030) still remain in the profile as 2021 - 2030.sbd so this is something that TB is forcing at the cosmetic level without changing the underlying data.
Forcing the change onto folder names held in Local Folders is a grotesque over-reaching of the powers of the program at the expense of the user's choice and I would ask that this particular change be rolled back as soon as possible.
Comment 10•2 months ago
|
||
(In reply to John Gallon from comment #9)
Type edited:
It is now Local Folders > Archives > Archives > Archives so I have no way of differentiating between 2021 - 2030 and 2011 - 2020.
Comment 11•2 months ago
|
||
@John For the local folders being renamed, is that with POP3?
Comment 12•2 months ago
•
|
||
@John If you can let us know how to recreate your local folder issue, and what version it was introduced, that would be very helpful for our investigation. I'm wondering if it's not related to this specific 145 issue.
Comment 13•2 months ago
|
||
Bug 1993842 has been backed out of 145.0.
It's been recommended to use in-app notifications and other means to communicate folder renaming to users if we move forward with delivering that change in a future release.
| Assignee | ||
Comment 14•2 months ago
|
||
Except for specific English folder names that Thunderbird might create, local folder names must
have been created by the user, so we should allow those names.
Updated•2 months ago
|
Comment 15•2 months ago
|
||
(In reply to Corey Bryant from comment #11)
@John For the local folders being renamed, is that with POP3?
Not sure of the various levels of POP. All of the POP accounts on the system show as POP Mail Server in the Server Settings part of the Account Settings.
Comment 16•2 months ago
|
||
(In reply to Corey Bryant from comment #12)
@John If you can let us know how to recreate your local folder issue, and what version it was introduced, that would be very helpful for our investigation. I'm wondering if it's not related to this specific 145 issue.
Started with v145. Pre-v145 I had a file structure under Local Folders of Archives with a set of sub-folders titled as "1999 - 2010", "2011 - 2020", "2021 - 2030". Each of those folders had subfolders for each year within the hierarchy. The earlier years then had manually created sub-folders for each month while the later years had TB created subfolders created from the Monthly Archived folders option in the account settings.
When I updated to v145 I took no action but the Archives > 2021 - 2030 folder had been renamed as Archives (so I then had Archives > Archives > then yearly folders from 2021 to 2025). There was no option to rename the second level Archive folder in the context menu and the folder name in the Properties window could not be edited.
I cannot remember the exact process I followed but since then the 2025 year folder has also been renamed Archives with no option to edit. The second level Archives folder which previously had yearly sub-folders named for 2021 to 2025 now has four sub-folders named for 2021 to 2024 and a fifth sub-folder previously shown as 2025 now named as Archives.
The file structure in the profile is still showing 2021 - 2030.sbd and 2025.sbd so there is a mismatch between the displayed value in the folder pane and the actual folder name in the profile.
Comment 17•2 months ago
|
||
Reading what John wrote I tried to do some things.
I used v146.0b2, set an account with IMAP just to be sure his issue is not limited to POP, created a Local Folder named "Test", then I went to Account Settings and made "Test" the archive folder for that account. The name of the folder was changed to the localized version of "Archives" and there was no way to rename it, which i suppose depends on this bug.
Then I tried to set another folder as the archive one and "Test" showed again it's real name.
(In reply to John Gallon from comment #16)
I cannot remember the exact process I followed but since then the 2025 year folder has also been renamed Archives with no option to edit. The second level Archives folder which previously had yearly sub-folders named for 2021 to 2025 now has four sub-folders named for 2021 to 2024 and a fifth sub-folder previously shown as 2025 now named as Archives.
Maybe you set those folders as the archive of different accounts, can you check that?
Comment 18•2 months ago
|
||
(In reply to [:Lorenzo27] from comment #17)
Reading what John wrote I tried to do some things.
I used v146.0b2, set an account with IMAP just to be sure his issue is not limited to POP, created a Local Folder named "Test", then I went to Account Settings and made "Test" the archive folder for that account. The name of the folder was changed to the localized version of "Archives" and there was no way to rename it, which i suppose depends on this bug.Then I tried to set another folder as the archive one and "Test" showed again it's real name.
(In reply to John Gallon from comment #16)
I cannot remember the exact process I followed but since then the 2025 year folder has also been renamed Archives with no option to edit. The second level Archives folder which previously had yearly sub-folders named for 2021 to 2025 now has four sub-folders named for 2021 to 2024 and a fifth sub-folder previously shown as 2025 now named as Archives.
Maybe you set those folders as the archive of different accounts, can you check that?
At the start of 2025 all accounts (11 POP plus 1 IMAP) were set to archive to Local Folders > Archives > 2021 - 2025 > 2025 where TB created the necessary monthly folders. Since the change the 2021 - 2025 sub-folder shows as Archive, then the 2021 to 2024 folders show but the 2025 folder shows as Archive (again). Now when I go to the Account Settings it shows as Archives on Local Folders but I have no way of knowing whether this is Archives previously known as Archives, Archives previously known as Archives/2021 - 2030 or Archives previously known as Archives/2021 - 2030/2025 without drilling down.
My normal process is to move all mail to a Mail folder under Local Folders as soon as it is received using message filters and the POP mails removed from the server. At the end of each month I archive the e-mails to the archive folder as indicated above.
Comment 19•2 months ago
|
||
I apologise if I make you do useless tests but I am a user like you and I'm looking for a way to let developers reproduce your bug, which I think it's a consequence of this bug.
Now I understand your folder tree and use of Local Folders. You have a main Archive folder, then you created some subfolders for different time periods, like "2021 -2025" which you set under Account Settings as Archive. This would let Thunderbird create folders for new years and months and would also explain the behaviour that you had at the beginning. If I'm wrong you can stop reading here.
When this bug became active, the archive folder "2021 - 2025" was renamed "Archives" and trying to correct the error I think you made "2025" the archive folder under one or more of your 12 accounts but you can't actually see if that's the case because like you said now in the "Copies & Folders" section of each account, no matter the original name of the folder, you see only:
Keep message archives in:
°Other: Archives on Local Folders
If I'm right to go back to the original behaviour you should go under "Account Settings"-"Copies & Folders"-"Keep message archives in:
°Other" for each of your 12 account and set what once was "Local Folders > Archives > 2021 - 2025" as the Archive, even if you can't see the real name you can do that by knowing the position of the folder in the folder tree, maybe you meant that by "drilling down". In this case it would be "Local Folders > Archives > Archives".
See this image to understand what I mean with the folder tree i created. https://ibb.co/PvYpm8B2
Please note that if I'm right the archive folder should be "2021 - 2025", not "2025" because then Thunderbird would create subfolders for each year under 2025 and you would have "Local Folders > Archives > 2021 - 2025 > 2025 > 2025" (then 2026, etc.)
Comment 20•2 months ago
|
||
(In reply to [:Lorenzo27] from comment #19)>
If I'm right to go back to the original behaviour you should go under "Account Settings"-"Copies & Folders"-"Keep message archives in:
°Other" for each of your 12 account and set what once was "Local Folders > Archives > 2021 - 2025" as the Archive, even if you can't see the real name you can do that by knowing the position of the folder in the folder tree, maybe you meant that by "drilling down". In this case it would be "Local Folders > Archives > Archives".
See this image to understand what I mean with the folder tree i created. https://ibb.co/PvYpm8B2Please note that if I'm right the archive folder should be "2021 - 2025", not "2025" because then Thunderbird would create subfolders for each year under 2025 and you would have "Local Folders > Archives > 2021 - 2025 > 2025 > 2025" (then 2026, etc.)
Despite my rather difficult ramblings you have managed to create the picture I was trying to convey. In regard to your suggestion regarding the setting of the archive location under the account settings, that is what I have done already so I hope that at the end of this month I will carry out my normal archiving and see a 2025-11 sub-folder created under 2025 (called Archives in the folder pane) in archives sub-folder 2021 - 2030 (called Archives in the folder pane). Time will tell.
Comment 21•2 months ago
|
||
Just for additional information I use the Send Later add-on and created a sub-folder "Send Later" under the Drafts folder for Send Later messages awaiting sending. This sub-folder has also been renamed since v145 to Drafts so again we have a sub-folder with the same name as the parent folder.
| Assignee | ||
Updated•2 months ago
|
Comment 22•2 months ago
|
||
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/ceccf14761ed
Allow non-localised folder names in Local Folders. r=BenC
| Reporter | ||
Comment 23•1 month ago
|
||
Not sure why this bug has been set as ' Resolved Fixed' with milestone 147
I'm testing in Daily 147.0b1 and there is no change.
All imap accounts are effected as per bug report.
Comment 24•1 month ago
|
||
(In reply to Anje from comment #23)
Not sure why this bug has been set as ' Resolved Fixed' with milestone 147
I'm testing in Daily 147.0b1 and there is no change.
All imap accounts are effected as per bug report.
Please give an example that can be tested in a new bug report. Thanks
Comment 25•1 month ago
|
||
The new bug report is already present: bug 2001557.
Description
•