Bug 1998456 - Allow non-localised folder names in Local Folders. r=BenC Except for specific English folder names that Thunderbird might create, local folder names must have been created by the user, so we should allow those names.

Differential Revision: https://phabricator.services.mozilla.com/D272352

--HG--
extra : rebase_source : f389701816f424863c54d2e2cf55195bd16db403
extra : amend_source : 1314def8667476b7ff18a45494a5aa050ef7e536
extra : histedit_source : 924286cee2dcbec2078b94ab45bc0eeddceb7689