mailnews/base/content/folder-menupopup.js
@@ -518,7 +518,6 @@
         this.childWrapper.appendChild(this._buildSeparator());
         const attributes = {
           label: `${folder.localizedName} - ${folder.server.prettyName}`,
-          uri: folder.URI,
           ...this._getCssSelectorAttributes(folder),
         };
         this.childWrapper.appendChild(this._buildMenuItem(attributes, folder));
@@ -619,7 +618,6 @@
           const attributes = {
             label: folderItem.label,
             tooltiptext: `${folderItem.folderPath} - ${folderItem.serverName}`,
-            uri: folderItem.folder.URI,
             crop: "start",
             ...this._getCssSelectorAttributes(folderItem.folder),
           };
@@ -675,7 +673,6 @@
               attributes.accesskey = this.getAttribute("fileHereAccessKey");
             } else {
               attributes.label = folder.localizedName;
-              attributes.uri = folder.URI;
               Object.assign(attributes, this._getCssSelectorAttributes(folder));
             }
 
@@ -718,7 +715,6 @@
 
           const attributes = {
             label: this._getFolderLabel(mode, globalInboxFolder, folder),
-            uri: folder.URI,
             ...this._getCssSelectorAttributes(folder),
           };
 
