mail/components/extensions/test/xpcshell/test_ext_folders_mv3.js
@@ -604,7 +604,11 @@ add_task(
 
         // Prepare expected event folder value.
         trash.specialUse = ["drafts", "trash"];
-        trash.name = "Drafts";
+        if (account.type != "local") {
+          // Except on Local Folders, setting the Drafts flag causes the name
+          // to change from Trash to Drafts.
+          trash.name = "Drafts";
+        }
 
         window.assertDeepEqual(
           {
