mailnews/base/test/unit/test_folderNames.js
@@ -56,16 +56,16 @@ add_task(function () {
     panorama ? "Sent" : ""
   );
 
-  // Gmail.
+  // A sent mail folder with a different name, so not created by us.
   const sentFolder2 = rootFolder.createLocalSubfolder("Sent Mail");
   sentFolder2.setFlag(Ci.nsMsgFolderFlags.SentMail);
   Assert.equal(sentFolder2.name, "Sent Mail");
-  Assert.equal(sentFolder2.localizedName, sentFolderName);
+  Assert.equal(sentFolder2.localizedName, "Sent Mail");
 
   const sentFolder3 = rootFolder.createLocalSubfolder("Outbox");
   sentFolder3.setFlag(Ci.nsMsgFolderFlags.SentMail);
   Assert.equal(sentFolder3.name, "Outbox");
-  Assert.equal(sentFolder3.localizedName, sentFolderName);
+  Assert.equal(sentFolder3.localizedName, "Outbox");
 
   // Normal drafts folder as created by us, but with weird capitalisation to
   // prove it works. The case is "corrected" by nsMsgDBFolder::AddSubfolder.
@@ -78,11 +78,11 @@ add_task(function () {
     panorama ? "Drafts" : ""
   );
 
-  // Yahoo!.
+  // A drafts folder with a different name, so not created by us.
   const draftsFolder2 = rootFolder.createLocalSubfolder("Draft");
   draftsFolder2.setFlag(Ci.nsMsgFolderFlags.Drafts);
   Assert.equal(draftsFolder2.name, "Draft");
-  Assert.equal(draftsFolder2.localizedName, draftsFolderName);
+  Assert.equal(draftsFolder2.localizedName, "Draft");
   Assert.equal(
     draftsFolder2.msgDatabase.dBFolderInfo.folderName,
     panorama ? "Draft" : ""
@@ -105,19 +105,21 @@ add_task(function () {
     panorama ? "Trash" : ""
   );
 
+  // A trash folder with a different name, so not created by us.
   const trashFolder2 = rootFolder.createLocalSubfolder("Bin");
   trashFolder2.setFlag(Ci.nsMsgFolderFlags.Trash);
   Assert.equal(trashFolder2.name, "Bin");
-  Assert.equal(trashFolder2.localizedName, trashFolderName);
+  Assert.equal(trashFolder2.localizedName, "Bin");
   Assert.equal(
     trashFolder2.msgDatabase.dBFolderInfo.folderName,
     panorama ? "Bin" : ""
   );
 
+  // A trash folder with a different name, so not created by us.
   const trashFolder3 = rootFolder.createLocalSubfolder("Deleted");
   trashFolder3.setFlag(Ci.nsMsgFolderFlags.Trash);
   Assert.equal(trashFolder3.name, "Deleted");
-  Assert.equal(trashFolder3.localizedName, trashFolderName);
+  Assert.equal(trashFolder3.localizedName, "Deleted");
   Assert.equal(
     trashFolder3.msgDatabase.dBFolderInfo.folderName,
     panorama ? "Deleted" : ""
@@ -138,7 +140,7 @@ add_task(function () {
   Assert.equal(junkFolder.localizedName, spamFolderName);
   Assert.equal(
     junkFolder.msgDatabase.dBFolderInfo.folderName,
-    panorama ? "Junk" : ""
+    panorama ? "Spam" : ""
   );
 
   const archivesFolder1 = rootFolder.createLocalSubfolder("Archives");
@@ -153,7 +155,7 @@ add_task(function () {
   const archivesFolder2 = rootFolder.createLocalSubfolder("Archive");
   archivesFolder2.setFlag(Ci.nsMsgFolderFlags.Archive);
   Assert.equal(archivesFolder2.name, "Archive");
-  Assert.equal(archivesFolder2.localizedName, archivesFolderName);
+  Assert.equal(archivesFolder2.localizedName, "Archive");
   Assert.equal(
     archivesFolder2.msgDatabase.dBFolderInfo.folderName,
     panorama ? "Archive" : ""
